<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="iol_slave_bis00lh_bitheader_input" Id="{7ffa11fb-e619-0d21-3135-adc0153810f0}">
    <Declaration><![CDATA[TYPE iol_slave_bis00lh_bitheader_input :
STRUCT
	CP: BIT;
	AA: BIT;
	AE: BIT;
	AF: BIT;
	///unused
	Bit4: BIT;
	_TO: BIT;
	HF: BIT;
	BB: BIT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>