<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="iol_slave_bis00lh_bitheader_output" Id="{148b3b26-7fd0-0b04-0351-cd7a856bfbb9}">
    <Declaration><![CDATA[TYPE iol_slave_bis00lh_bitheader_output :
STRUCT
	AV: BIT;
	///unused
	Bit1: BIT;
	GR: BIT;
	///unused
	Bit3: BIT;
	///unused
	Bit4: BIT;
	KA: BIT;
	TI: BIT;
	///unused
	Bit7: BIT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>