<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="iol_slave_bis00lh_data" Id="{a0cd6950-96ff-00f1-3e55-fd06f1550cc8}">
    <Declaration><![CDATA[TYPE iol_slave_bis00lh_data :
STRUCT
	a:bool; (*To remove LB issue*)
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>