<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="iol_slave_bis00lh_pdo_output" Id="{a1f5f94b-8b05-041f-32b7-72e588716df1}">
    <Declaration><![CDATA[TYPE	iol_slave_bis00lh_pdo_output :		
STRUCT
		ByteArr AT %Q*: ARRAY[0..9] OF BYTE;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>